@@ -192,7 +192,11 @@
         <h2>Syntax</h2>
     <pre class="Syntax"><code>Get-TrustedHosts [&lt;CommonParameters&gt;]</code></pre>
     
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>PowerShell stores its trusted hosts list as a comma-separated list of hostnames in the <code>WSMan</code> drive.  That's not very useful.  This function reads that list, splits it, and returns each item.</p>
+
+    </div>
     
     
 
@@ -200,10 +204,20 @@
         
     
         
-    
+            <h2>Return Values</h2>
+        <p><a href="http://msdn.microsoft.com/en-us/library/system.string.aspx">System.String</a>. </p>
+
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Get-TrustedHosts</code></pre>
+            <p><p>If the trusted hosts lists contains <code>example.com</code>, <code>api.example.com</code>, and <code>docs.example.com</code>, returns the following:</p>
+
+<pre><code>example.com
+api.example.com
+docs.example.com
+</code></pre>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
